--- a/doc/Acronimos.tex
+++ b/doc/Acronimos.tex
@@ -12,7 +12,7 @@
 
 \acro{TFG}[TFG]{Treball Final de Grau}
 
-\acro{GNSS}[GNSS]{Sistema Global de Navegación por Satélite}
+\acro{GNSS}[GNSS]{Sistemas Globales de Navegación por Satélite}
 
 \acro{GPS}[GPS]{Sistemas de Posicionamiento Global}
 
