--- a/doc/Bibliografia.bib
+++ b/doc/Bibliografia.bib
@@ -22,6 +22,13 @@ year={2014},
 url={https://www.gps.gov/applications},
 }
 
+@ARTICLE{Microsoft01,
+author={Microsoft collabolators},
+title={Data parser},
+year={2017},
+url={https://docs.microsoft.com/en-us/security-risk-detection/concepts/data-parser},
+}
+
 @ARTICLE{Borkovich01,
 author={Borkovich, D. , Noah, P.},
 title={Big Data in the Information Age:
@@ -63,13 +70,31 @@ year={2008-2014},
 url={https://pandas.pydata.org/docs},
 }
 
-
+@ARTICLE{Bearing01,
+author={Jeromer},
+title={compassbearing.py},
+year={2012},
+url={https://gist.github.com/jeromer/2005586},
+}
 
 @ARTICLE{Morales01,
 author={Morales, A.},
 title={Los formatos GIS ráster más populares},
 year={2010},
 url={http://mappinggis.com/2015/12/los-formatos-gis-raster-mas-populares},
+}
+
+@ARTICLE{Garmin01,
+author={Outdoor Garming Supply},
+title={Outdoor Garming Supply},
+year={2020},
+url={https://www.outdoorgarminsupply.com/},
+}
+
+@ARTICLE{Uber01,
+author={Uber development team},
+title={Deck.gl documentation},
+url={https://deck.gl/documentation/overview/introduction},
 }
 
 @ARTICLE{Docker01,
