--- a/doc/MemoriaTFG.tex
+++ b/doc/MemoriaTFG.tex
@@ -69,6 +69,7 @@
 % més convenient, per exemple listings. 
 \usepackage{listings} 
 \usepackage{enumitem}
+\usepackage{fontawesome}
 
 \lstset{language=Python}
 \definecolor{codegreen}{rgb}{0,0.6,0}
